@@ -53,8 +53,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,2,4
- PRODUCTVERSION 1,0,2,4
+ FILEVERSION 1,0,2,5
+ PRODUCTVERSION 1,0,2,5
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -70,12 +70,12 @@ BEGIN
         BLOCK "041904b0"
         BEGIN
             VALUE "FileDescription", "Colorer - Syntax Highlighting for FAR2"
-            VALUE "FileVersion", "1, 0, 2, 4"
+            VALUE "FileVersion", "1, 0, 2, 5"
             VALUE "InternalName", "colorer"
             VALUE "LegalCopyright", "Copyright (C) 2009"
             VALUE "OriginalFilename", "colorer.dll"
             VALUE "ProductName", "Colorer library"
-            VALUE "ProductVersion", "1, 0, 2, 4"
+            VALUE "ProductVersion", "1, 0, 2, 5"
         END
     END
     BLOCK "VarFileInfo"
