@@ -1,5 +1,12 @@
 ﻿$Revision$
   $Author$ $Date$
+	1. ошибка доступа при вызове EnableColorer не находясь в редакторе
+	2. поправлен размер диалога настроек
+	3. обновлен far2sdk
+	4. из OpenPluginW убраны ненужные действия
+
+#Revision: 1380
+  Author: ctapmex Date: 2010-02-12 12:29:27 +0500 (Пт, 12 фев 2010)
 	1. реализована очистка всех окон редактора при отключении плагина.
 
 #Revision: 1379
